# Python-Tutorial

./: .gitignore  LICENSE  README.md
Applications/: README.md
Applications/01-Data-Science/1-Basics/: basics.py
Applications/01-Data-Science/2-Intro-Example/: example.py
Applications/01-Data-Science/3-Decision-Tree/: decision_tree.py
Applications/01-Data-Science/Config-Files/: base_config.yaml  yaml_parser.py
Applications/01-Data-Science/Pandas/: intro.ipynb  reading_files.ipynb  state_population.csv
Applications/01-Machine-Learning/: README.md
Applications/02-Computer-Vision/: README.md
Applications/02-Web/: README.md
Applications/03-Computer-Vision/Intro/: run.py
Applications/03-Computer-Vision/convolve/: convolve.py
Applications/03-Office-Docs/: README.md
Lessons/: README.md
Lessons/01-Beginner/: README.md
Lessons/01-Beginner/01-Intro/: 01-getting-started.md  02-using-jupyter.md  README.md
Lessons/01-Beginner/02-Data-Types/: 01_basics.ipynb  02_strings.ipynb  README.md
Lessons/01-Beginner/03-Control-Flow/: 01_control_flow.ipynb  (+1 more)
Lessons/02-Intermediate/: README.md
Lessons/02-Intermediate/09-Static-Analysis/glitchforge/: README.md  pyproject.toml
Lessons/02-Intermediate/09-Static-Analysis/glitchforge/src/glitchforge/: __init__.py  core.py  models.py
Lessons/02-Intermediate/09-Static-Analysis/glitchforge/tests/: test_core.py
Lessons/03-Advanced/: README.md
Sample/PyTutorial/: README.md  pyproject.toml
Sample/PyTutorial/src/pytutorial/: __init__.py  __main__.py  cli.py  errors.py  main.py
Sample/PyTutorial/src/pytutorial/basics/: __init__.py  arithmetic.py  greetings.py
Sample/PyTutorial/src/pytutorial/grades/: __init__.py  models.py  storage.py
Sample/PyTutorial/src/pytutorial/utilities/: __init__.py  stats.py  text.py
Sample/PyTutorial/tests/: conftest.py  test_basics.py  test_cli.py  test_grades.py  test_package.py  test_stats.py  test_storage.py  test_text.py
Spotlight/: README.md
Spotlight/Projects/: codspeed.md
(+115 files in other folders)
