[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glitchforge"
version = "0.1.0"
description = "Intentionally uneven sample package for static code checker testing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Static Checker Fixture" }]
dependencies = []

[project.scripts]
glitchforge = "glitchforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
